fixe extra space in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,13 @@
   font-display: swap;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
+}
+
 body {
   font-family: "Lufga", sans-serif;
   @apply bg-primaryBg text-gray-800;
@@ -51,7 +58,7 @@ h6 {
 }
 
 .container {
-  @apply px-4 mx-auto max-w-7xl;
+  @apply px-4 mx-auto max-w-7xl w-full;
 }
 
 .section {
